--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -1,13 +1,13 @@
 body {
     font-family: "Poppins", sans-serif;
-    background-color: #f8f9fa;
+    background-color: white;
     color: #333;
     margin: 0;
     padding: 0;
 
 }
 header {
-    background-color: #007bff;
+    background-color: lightblue;
     color: white;
     text-align: center;
     padding: 20px;
@@ -26,7 +26,7 @@ header {
 }
 
 button {
-    background: #007bff;
+    background: grey;
     color: white;
     border: none;
     padding: 10px 18px;
@@ -38,5 +38,5 @@ button {
 }
 
 button:hover {
-    background: #0056b3;
+    background: lightblue;
 }
